# data-control-center

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  security-audit.yml
backend/: README.md  pyproject.toml
backend/app/: config.py  errors.py  main.py  security.py
backend/app/api/: agent.py  ask.py  datasets.py  datasets_inspect.py  datasets_jobs.py  datasets_upload.py  llm.py  local_session.py  relationships.py
backend/app/models/: __init__.py  api.py
backend/app/services/: agent.py  ask_store.py  jobs.py  llm_models.py  profiler.py  query.py  query_errors.py  registry.py  relationships.py  source_errors.py  sql_validate.py  upload_validation.py  workspace.py  workspace_engine.py  workspace_schema.py  workspace_stores.py
backend/app/services/agent/: __init__.py  context.py  ollama_client.py  parsers.py  prompts.py  workflow.py  workflow_run.py
backend/app/services/profiler/: __init__.py  budget.py  builder.py  columns.py  full_metrics.py  io.py  patterns.py  quality.py  stages.py  structure.py
backend/app/services/workspace_stores/: __init__.py  job_store.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_ask_api.py  test_ask_store.py  test_chart_sql_execute.py  test_config.py  test_datasets_prepare_job.py  test_llm_models.py  test_models_export.py  test_profiler.py  test_query_errors.py  test_query_execute.py  test_registry.py  test_relationships.py  test_security_hardening.py  test_sql_validate.py  test_workspace.py  test_workspace_parquet_row_count.py
backend/tests/agent/: conftest.py  test_agent_api.py  test_context.py  test_ollama_client.py  test_parsers.py  test_run_agent_ask.py  test_run_agent_ask_stream.py
backend/tests/api/: test_datasets_http.py
backend/tests/fixtures/: chart_orders.csv
backend/tests/profiler/: test_budget.py  test_builder.py  test_full_metrics.py  test_io_large_file.py
backend/tests/workspace/: test_engine.py
docs/: 5-minute-tour.md  README.md  RELEASE.md  user-guide.md
examples/: README.md  customers.csv  events.jsonl  orders.parquet
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  appQueryClient.test.ts  appQueryClient.ts
frontend/src/api/: client.test.ts  client.ts  types.test.ts  types.ts
frontend/src/components/: ActionInSql.test.tsx
frontend/src/hooks/: UiUrlSync.test.tsx  UiUrlSync.tsx  useAskStream.test.tsx  useAskStream.ts  useDatasetProfile.test.tsx  useDatasetProfile.ts  useDisposableEChart.test.tsx  useDisposableEChart.ts  useGlobalShortcuts.test.tsx  useGlobalShortcuts.ts  useOpenInSql.test.tsx  useResizableSplit.test.ts  useResizableSplit.ts
frontend/src/lib/: chartTheme.test.ts  format.ts  (+5 more)
scripts/release/: README.md  mailmap.txt  strip_cursor_trailer.py
(+123 files in other folders)
